world-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: world-service
spec:
  selector:
    app: KubeDemo
    tier: backend
  ports:
    - protocol: TCP
      port: 2000
      targetPort: http
